<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".DashboardActivity">


    <LinearLayout
        android:id="@+id/Dashboard_Activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:src="@drawable/logo" />

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:text="@string/sign_up"
            android:textColor="#121212"
            android:textSize="28sp"
            android:textStyle="bold">
            </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lato"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:textColor="#424242"
            android:text="@string/lets_create_a_new_account"
            android:textSize="16sp"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lato"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:text="@string/enter_your_mobile_number_and_we_will_send_you_a_verification_code"
            android:textSize="14sp"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:textStyle="bold">
        </TextView>
        
        
        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:gravity="center"
            android:background="@drawable/backgroundinput"
            android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/_91"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#212121"
            android:letterSpacing="0.01"/>


            <EditText
                android:id="@+id/inputmobilesignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/_9547862451"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="10"
                android:letterSpacing="0.01"
                android:textColor="#212121"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck">
            </EditText>

        </LinearLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/registerotp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:layout_margin="30dp"
                android:text="@string/proceed"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textColor="#f0f0f0"
                android:textStyle="bold"
                android:background="@drawable/buttonbackground"/>
            
            <ProgressBar
                android:id="@+id/loading_otp_register"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </FrameLayout>


        <TextView
            android:id="@+id/skiptodash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/lato"
            android:textColor="#80C342"
            android:text="@string/skip_for_now"
            android:textSize="14sp"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:textStyle="bold">
        </TextView>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="0dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="160dp"
                android:fontFamily="@font/lato"
                android:textColor="#424242"
                android:layout_marginRight="5dp"
                android:text="@string/already_have_an_account"
                android:textSize="12sp"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"
                android:textStyle="bold">
            </TextView>



            <TextView
                android:id="@+id/logintext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="160dp"
                android:fontFamily="@font/lato"
                android:textColor="#80C342"
                android:text="@string/log_in"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"
                android:textStyle="bold">
            </TextView>



        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:textColor="#424242"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:text="@string/by_signing_in_you_agree_to_our_terms_and_conditions_and_privacy_policy"
            android:textSize="10sp"
            android:textAlignment="center"
            android:textStyle="bold">
        </TextView>


    </LinearLayout>





</ScrollView>