<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".UserData">


    <LinearLayout
        android:id="@+id/userdata_Activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:text="@string/enter_your_details"
            android:textColor="#121212"
            android:textSize="28sp"
            android:textStyle="bold">
        </TextView>



        <!--        //otpnumber boxes-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/cust_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:hint="@string/name"
                android:background="@drawable/backgroundinput"
                android:inputType="text"
                android:textColorHint="#121212"
                android:textStyle="normal"
                android:layout_margin="20dp"
                android:padding="15dp"
                android:drawableLeft="@drawable/baseline_person_outline_24"
                android:drawablePadding="20dp"
                />

            <EditText
                android:id="@+id/cust_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_below="@+id/cust_name"
                android:background="@drawable/backgroundinput"
                android:drawableLeft="@drawable/baseline_cake_24"
                android:drawablePadding="20dp"
                android:fontFamily="@font/roboto"
                android:hint="@string/age"
                android:inputType="number"
                android:padding="15dp"
                android:textColorHint="#121212"
                android:textStyle="normal" />


            <EditText
                android:id="@+id/cust_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/cust_age"
                android:background="@drawable/backgroundinput"
                android:drawableLeft="@drawable/baseline_monitor_weight_24"
                android:drawablePadding="20dp"
                android:fontFamily="@font/roboto"
                android:hint="@string/weight"
                android:inputType="numberDecimal"
                android:padding="15dp"
                android:textColorHint="#121212"
                android:textStyle="normal" />


            <EditText
                android:id="@+id/cust_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/cust_weight"
                android:background="@drawable/backgroundinput"
                android:drawableLeft="@drawable/baseline_height_24"
                android:drawablePadding="20dp"
                android:fontFamily="@font/roboto"
                android:hint="@string/height"
                android:inputType="numberDecimal"
                android:padding="15dp"
                android:textColorHint="#121212"
                android:textStyle="normal" />


            <EditText
                android:id="@+id/cust_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/cust_height"
                android:background="@drawable/backgroundinput"
                android:drawableLeft="@drawable/baseline_place_24"
                android:drawablePadding="20dp"
                android:fontFamily="@font/roboto"
                android:hint="@string/address"
                android:inputType="text"
                android:padding="15dp"
                android:textColorHint="#121212"
                android:textStyle="normal" />


        </RelativeLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/submitbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:layout_margin="30dp"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textColor="#f0f0f0"
                android:textStyle="bold"
                android:background="@drawable/buttonbackground"/>

            <ProgressBar
                android:id="@+id/loading_otp_verify"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:visibility="gone"/>


        </FrameLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="200dp"
            android:gravity="center_horizontal">

        </LinearLayout>

    </LinearLayout>





</ScrollView>