<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".LoginActivity">


    <LinearLayout
        android:id="@+id/Login_Activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:text="Log In"
            android:textColor="#121212"
            android:textSize="28sp"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lato"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:textColor="#424242"
            android:text="Log In into your Account"
            android:textSize="16sp"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lato"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:text="@string/enter_your_registered_mobile_number"
            android:textSize="14sp"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:textStyle="bold">
        </TextView>


        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:gravity="center"
            android:background="@drawable/backgroundinput"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/_91"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#212121"
                android:letterSpacing="0.01"/>


            <EditText
                android:id="@+id/inputmobilelogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/_9965248762"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="10"
                android:letterSpacing="0.01"
                android:textColor="#212121"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck">
            </EditText>

        </LinearLayout>


        <Button
            android:id="@+id/loginbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:layout_margin="30dp"
            android:text="@string/proceed"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textColor="#f0f0f0"
            android:textStyle="bold"
            android:background="@drawable/buttonbackground"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="0dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:fontFamily="@font/lato"
                android:textColor="#424242"
                android:layout_marginRight="5dp"
                android:text="@string/don_t_have_an_existing_account_"
                android:textSize="12sp"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"
                android:textStyle="bold">
            </TextView>


            <TextView
                android:id="@+id/signintext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:fontFamily="@font/lato"
                android:textColor="#80C342"
                android:text="Sign In"
                android:textSize="14sp"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"
                android:textStyle="bold">
            </TextView>



        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:textColor="#424242"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:text="@string/by_signing_in_you_agree_to_our_terms_and_conditions_and_privacy_policy"
            android:textSize="10sp"
            android:textAlignment="center"
            android:textStyle="bold">
        </TextView>






    </LinearLayout>





</ScrollView>