<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".OTPverificationActivity">


    <LinearLayout
        android:id="@+id/verifyotp_Activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:text="@string/otp_verification"
            android:textColor="#121212"
            android:textSize="28sp"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lato"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:textColor="#424242"
            android:text="Log In into your Account"
            android:textSize="16sp"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lato"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:text="Enter the OTP we sent on "
            android:textSize="14sp"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:id="@+id/otpverify_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:textColor="#80C342"
            android:textSize="12sp"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:textStyle="bold">
        </TextView>


<!--        //otpnumber boxes-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/otpdigit1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="#121212"
                android:textSize="24sp"
                android:background="@drawable/otpbox"
                android:textStyle="bold"
                android:layout_marginRight="5dp"
                tools:ignore="TouchTargetSizeCheck"/>


            <EditText
                android:id="@+id/otpdigit2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="#121212"
                android:textSize="24sp"
                android:background="@drawable/otpbox"
                android:textStyle="bold"
                android:layout_marginRight="5dp"
                tools:ignore="TouchTargetSizeCheck"/>


            <EditText
                android:id="@+id/otpdigit3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="#121212"
                android:textSize="24sp"
                android:background="@drawable/otpbox"
                android:textStyle="bold"
                android:layout_marginRight="5dp"
                tools:ignore="TouchTargetSizeCheck"/>


            <EditText
                android:id="@+id/otpdigit4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="#121212"
                android:textSize="24sp"
                android:background="@drawable/otpbox"
                android:textStyle="bold"
                android:layout_marginRight="5dp"
                tools:ignore="TouchTargetSizeCheck"/>

            <EditText
                android:id="@+id/otpdigit5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="#121212"
                android:textSize="24sp"
                android:background="@drawable/otpbox"
                android:textStyle="bold"
                android:layout_marginRight="5dp"
                tools:ignore="TouchTargetSizeCheck"/>


            <EditText
                android:id="@+id/otpdigit6"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="#121212"
                android:textSize="24sp"
                android:background="@drawable/otpbox"
                android:textStyle="bold"
                android:layout_marginRight="5dp"
                tools:ignore="TouchTargetSizeCheck"/>

        </LinearLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/verifybtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:layout_margin="30dp"
                android:text="@string/verify"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textColor="#f0f0f0"
                android:textStyle="bold"
                android:background="@drawable/buttonbackground"/>

            <ProgressBar
                android:id="@+id/loading_otp_verify"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:visibility="gone"/>


        </FrameLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:textColor="#424242"
                android:layout_marginRight="5dp"
                android:text="@string/didn_t_recieved_an_otp"
                android:textSize="12sp"
                android:textAlignment="center"
                android:textStyle="bold">
            </TextView>

            <TextView
                android:id="@+id/resendotp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:textColor="#80C342"
                android:text="@string/resent_otp"
                android:textSize="12sp"
                android:textAlignment="center"
                android:textStyle="bold">
            </TextView>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="200dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato"
                android:textColor="#424242"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:text="@string/by_signing_in_you_agree_to_our_terms_and_conditions_and_privacy_policy"
                android:textSize="10sp"
                android:textAlignment="center"
                android:textStyle="bold">
            </TextView>

        </LinearLayout>

    </LinearLayout>





</ScrollView>